--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "test": "yarn jest",
+    "test": "yarn test:unit",
+    "test:all": "yarn test:unit && yarn test:e2e",
+    "test:unit": "yarn jest --config ./configs/unit.config.js",
+    "test:e2e": "yarn jest --config ./configs/e2e.config.js",
     "clean": "rimraf yarn.lock node_modules",
     "format": "yarn pretty"
   },
