--- a/package.json
+++ b/package.json
@@ -8,29 +8,23 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "clean": "cd node_modules/keg-core; yarn clean",
-    "clean:install": "yarn clean:full; yarn install",
-    "clean:full": "yarn clean; yarn clean:nm; yarn install",
-    "clean:nm": "rimraf ./yarn.lock; rimraf ./package.lock; rimraf node_modules",
-    "clean:rn": "yarn keg clean:rn",
-    "format": "yarn pretty",
-    "keg": "cd node_modules/keg-core; yarn",
-    "pretty": "./node_modules/.bin/prettier --config ./configs/prettier.config.js --write '**/*.{js,jsx}'",
-    "postinstall": "",
-    "setup": "yarn install --ignore-engines; cd node_modules/keg-core; yarn postinstall --ignore-engines",
-    "start": "cd node_modules/keg-core; expo start",
-    "task": "node ./tasks/runTask.js"
-  }, 
+    "test": "yarn test:unit",
+    "test:all": "yarn test:unit && yarn test:e2e",
+    "test:unit": "yarn jest --config ./configs/unit.config.js",
+    "test:e2e": "yarn jest --config ./configs/e2e.config.js",
+    "clean": "rimraf yarn.lock node_modules",
+    "format": "yarn pretty"
+  },
   "dependencies": {
     "@keg-hub/jsutils": "8.4.0",
-    "@keg-hub/args-parse": "6.2.1",
-    "@keg-hub/ask-it": "0.0.1",
     "@keg-hub/spawn-cmd": "0.1.0",
-    "app-root-path": "3.0.0",
-    "express": "4.11.1",
-    "keg-core": "npm:@keg-hub/keg-core@9.0.1",
-    "module-alias": "2.2.2",
+    "app-root-path": "3.0.0"
+  },
+  "devDependencies": {
+    "rimraf": "3.0.2",
+    "jest": "26.6.3",
+    "prettier": "2.0.5",
     "nodemon": "2.0.4",
-    "prettier": "2.0.5"
+    "module-alias": "2.2.2"
   }
 }
